# INFT2503_CPP

./: oblig1.tgz  oblig2.tgz  oblig3.tgz
oblig1/: CMakeLists.txt  a.out  filetemp.cpp  simpletemp.cpp
oblig2/: CMakeLists.txt  main.cpp
oblig3/: CMakeLists.txt  Commodity.cpp  Commodity.hpp  task1_and_2.cpp  task4.cpp
oblig4/: CMakeLists.txt  main.cpp  task2.cpp
oblig5/: CMakeLists.txt  main.cpp
oblig6/: CMakeLists.txt  main.cpp  task2.cpp
oblig7/: CMakeLists.txt
oblig7/Oppg1/: 1a.cpp  1b.cpp  Fraction.cpp  Fraction.h
oblig7/Oppg2/: 2.cpp  Set.cpp  Set.h
oblig8/: CMakeLists.txt  oppg1.cpp  oppg2.cpp
oblig9/: CMakeLists.txt  oppg1.cpp
